update java verison , tomcat port