@@ -1,5 +1,5 @@
 # Use an official Maven image to build the application
-FROM maven:3.8.4-openjdk-17 AS build
+FROM maven:3.8.4-openjdk-11 AS build
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -12,14 +12,11 @@ COPY src ./src
 #RUN mvn clean package -DskipTests
 
 # Build the project with added compiler flags for Java 17 compatibility
-RUN mvn clean package -DskipTests \
-    -Dmaven.compiler.forceJavacCompilerUse=true \
-    -Djdk.module.illegalAccess=permit \
-    -Dmaven.compiler.compilerArgs="--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
+RUN mvn clean package -DskipTests
 
 
 # Use an official OpenJDK runtime as a parent image
-FROM openjdk:17-jdk-slim
+FROM openjdk:11-jdk-slim
 
 # Set the working directory inside the container
 WORKDIR /app
